# Backend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  db.db3  default.nix  flake.nix  shell.nix
.direnv/: flake-profile-2-link  flake-profile-4-link
.github/workflows/: api-test.yml  main.yml  valgrind.yml
files/: style.yml
files/testdata/: auth.json  default.json  journals.json  settings.json  userdata.json
include/: Api.hpp  Database.hpp  Endpoints.hpp  Globals.hpp  Logger.hpp  PredictionManager.hpp  Route.hpp  Table.hpp  TestTemplate.hpp  Utils.hpp
include/Endpoints/: Answers.hpp  Journals.hpp  Predictions.hpp  Questions.hpp  Settings.hpp  Users.hpp
include/Routes/: Answers.hpp  Journals.hpp  Mitigations.hpp  Predictions.hpp  Questions.hpp  Settings.hpp  Tests.hpp  Users.hpp
modules/database/: Table.py  database.py
scripts/: plot.py
src/: CMakeLists.txt  backend.cpp  database_test.cpp  predictions_test.cpp  utils_test.cpp
tests/: api-test.sh  test_api.py  test_database.py
